--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>modulo-1-evaluacion-final-crodriguez1992</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;600&family=Roboto+Slab&display=swap"
+    rel="stylesheet">
+
   <link rel="stylesheet" href="./scss/main.scss" />
 
   <!-- <link rel="icon" href="./images/favicon.png" /> -->
